CSS changes in Criticality group drawer, issue fix in Individual profile collapse
WC

--- a/src/components/common/Common.module.css
+++ b/src/components/common/Common.module.css
@@ -1489,9 +1489,9 @@
     line-height: 16px;
 }
 
-.graySeparator {
+/* .graySeparator {
     border-top: 1px solid #dedede;
-}
+} */
 
 .advanceTimingContainer {
     background-color: #f4f4f4;
